<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:doov="http://schemas.android.com/apk/res/com.doos.secure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@null" />

        <com.doov.secure.ui.view.DoovEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            doov:editHint="@string/page_write_username_hint"
            doov:errorText="@string/page_write_username_error"
            doov:textCanWrite="true"
            doov:titleText="@string/page_write_username_title" />

        <com.doov.secure.ui.view.DoovEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            doov:editHint="@string/page_write_mobile_hint"
            doov:errorText="@string/page_write_mobile_error"
            doov:textCanWrite="true"
            doov:titleText="@string/page_write_mobile_title" />

        <com.doov.secure.ui.view.DoovEditText
            android:id="@+id/identity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            doov:editHint="@string/page_write_id_hint"
            doov:errorText="@string/page_write_id_error"
            doov:textCanWrite="true"
            doov:titleText="@string/page_write_id_title" />

        <com.doov.secure.ui.view.DoovEditText
            android:id="@+id/buytime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            doov:editHint="@string/page_write_time_hint"
            doov:textCanWrite="false"
            doov:titleText="@string/page_write_time_title" />
    </LinearLayout>

</RelativeLayout>