<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin" >

		<TextView
		    android:id="@+id/cardpay"
		    
		    android:layout_width="wrap_content"
		    
		    android:layout_height="wrap_content"
		    
		    android:layout_weight="1"
		    
		    android:drawableTop="@drawable/zhifuka"
		    
		    android:gravity="center_horizontal"
		    
		    android:text="@string/zhifuka_name"/>
		
        <TextView
            android:id="@+id/alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/zhifubao"
            android:gravity="center_horizontal"
            android:text="@string/alipay_name" />

        <TextView
            android:id="@+id/weixinpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/weixin"
            android:gravity="center_horizontal"
            android:text="@string/weixin_name" />
    </LinearLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_btn_height"
        android:background="@drawable/base_button_bg"
        android:text="@string/cancel" />

</LinearLayout>